# dir2html

./: Cargo.toml  LICENSE  README.md
src/: main.rs
template/: README.md  package.json  tailwind.config.js
template/config/: webpack.config.js
template/public/: index.html  manifest.json
template/src/: App.tsx  index.tsx
template/src/classes/: Dirent.ts
template/src/components/: BreadCrumb.tsx  DirListing.tsx  Footer.tsx  Header.tsx  Home.tsx  Main.tsx  RightSideBar.tsx  Table.tsx  TableItem.tsx  TreeView.tsx  nav.tsx
template/src/components/SearchModal/: SearchResult.tsx  index.tsx
template/src/css/: global.css  index.css  index.module.css
template/src/styles/: index.css
template/types/filelist/: index.d.ts
utility/: Cargo.toml  README.md
utility/src/: main.rs
