[package]
name = "dir2html"
version = "0.1.0"
authors = ["ptrickett <ptrickett@porthas.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3.2"
async-std = "1.9.0"
filesize = "0.2.0"
futures = "0.3.13"
is_elevated = "0.1.2"
json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1.2.0", features = ["fs", "full"]}
